# zaios

./: .gitignore  LICENSE  Makefile  README.md  build.sh
.github/workflows/: build.yml  zaios-healer.lock.yml  zaios-healer.md
calamares/: settings.conf
calamares/branding/zaios/: branding.desc  show.qml
calamares/modules/: bootloader.conf  partition.conf  services-systemd.conf  unpackfs.conf  users.conf  zaios-finalize.conf
calamares/modules/zaios-finalize/: main.py  module.desc
docs/: ARCHITECTURE.md  BUILD.md  GITHUB_ACTIONS.md  INSTALL.md
rootfs/etc/: group  hostname  hosts  passwd  shadow
rootfs/etc/bluetooth/: main.conf
rootfs/etc/dbus-1/: zaios.conf
rootfs/etc/modules-load.d/: zaios.conf
rootfs/etc/udev/rules.d/: 50-zaios.rules
rootfs/etc/wpa_supplicant/: wpa_supplicant.conf
rootfs/etc/zaios/: zaios.conf
scripts/: setup-github.sh
src/init/: Makefile  zaios-cast-svc.c  zaios-init.c  zaios-init.h  zaios-input-svc.c  zaios-mounts.c  zaios-network-svc.c  zaios-services.c  zaios-spotify-svc.c
src/kernel/configs/: zaios_arm.config  zaios_arm64.config  zaios_common.config  zaios_x86_64.config
src/shell/: CMakeLists.txt
src/shell/qml/: main.qml
src/shell/qml/components/: AppTile.qml  Background.qml  BatteryBadge.qml  ClockWidget.qml  FocusButton.qml  GlassCard.qml  NetworkBadge.qml  PowerMenu.qml  SearchBar.qml  Toast.qml  TopBar.qml  VolumeOverlay.qml
src/shell/qml/pages/: About.qml  Apps.qml  Bluetooth.qml  Browser.qml  Cast.qml  Home.qml  Network.qml  Settings.qml  SetupWizard.qml  Spotify.qml  YouTube.qml
src/shell/qml/styles/: Glassmorphism.qml  Theme.qml
src/shell/src/: AppManager.cpp  AppManager.h  BluetoothManager.cpp  BluetoothManager.h  BrowserManager.cpp  BrowserManager.h  CastManager.cpp  CastManager.h  InputBridge.cpp  InputBridge.h  NetworkManager.cpp  NetworkManager.h  NotificationManager.cpp  NotificationManager.h  PowerManager.cpp  PowerManager.h  SettingsManager.cpp  SettingsManager.h  SetupWizard.cpp  SetupWizard.h  SpotifyManager.cpp  SpotifyManager.h  SystemService.cpp  SystemService.h  YouTubeManager.cpp  YouTubeManager.h  main.cpp
